# Virus-scanning-tool

./: Cargo.toml  README.md  build_clamav_local.sh  clamav_env.sh  git.sh  git_subtree_tool.sh  run_scanner.sh  test_cli.sh  update_clamav_db.sh  使用文档.md
etc/: config.yaml  virus-scanner.service
src/: lib.rs  main.rs
src/api/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/core/: mod.rs  security.rs
src/monitor/: mod.rs
src/report/: mod.rs
src/scanner/: database.rs  engine.rs  mod.rs  tests.rs
src/tests/: integration.rs
src/update/: mod.rs
src/utils/: logging.rs  mod.rs
