[package]
name = "virus-scanner"
version = "1.0.0"
edition = "2021"
description = "Enterprise-grade virus scanning tool for Linux"
authors = ["Security Team"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
anyhow = "1.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"
fern = "0.6"

# File operations
nix = { version = "0.27", features = ["user", "fs"] }
users = "0.11"

# HTTP client for virus updates
reqwest = { version = "0.11", features = ["json", "native-tls"] }
ftp = "3"

# Database for virus signatures
rusqlite = { version = "0.29", features = ["bundled"] }
lru = "0.12"

# Concurrency and performance
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "6.0"
rayon = "1.9"
once_cell = "1.19"
num_cpus = "1"

# CSV for reports
csv = "1.3"

# Cryptography
openssl = "0.10"
aes = "0.8"
ctr = "0.9"

# System info
sysinfo = "0.30"

# Compression
zstd = "0.12"
xz2 = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# API server
warp = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }

# Utilities
glob = "0.3"
regex = "1.10"
path-absolutize = "3.1"
dirs = "5.0"
tempfile = "3.10"
hex = "0.4"
base64 = "0.21"
walkdir = "2.4"
crc32fast = "1.4"
zip = "0.6"
rand = "0.8"

# Inotify/Fanotify (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.10"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.10"
assert_fs = "1.1"

[features]
default = ["api"]
api = ["warp", "tokio-tungstenite"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace]
